--- a/employee salary prediction.ipynb
+++ b/employee salary prediction.ipynb
@@ -2,7 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
+   "id": "efca9928",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!pip install joblib scikit-learn"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "7adfd133-31a6-4ebc-bade-eb44f5de869d",
    "metadata": {},
    "outputs": [],
@@ -12,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "9e0850d8-ee98-4931-9784-b6a2ed85d692",
    "metadata": {},
    "outputs": [],
@@ -22,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "077f993f-3d16-4cc9-83d6-d81e7514f9c0",
    "metadata": {},
    "outputs": [
@@ -298,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "cdc67b7e-7458-43d5-a97a-478af44c70e0",
    "metadata": {},
    "outputs": [
@@ -441,7 +451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "329e3b00-3b13-4a13-ba9f-04d84be72ed5",
    "metadata": {},
    "outputs": [
@@ -462,7 +472,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "ae99428f-5fc8-4963-9d9d-7b9df684bbd1",
    "metadata": {},
    "outputs": [
@@ -499,7 +509,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "7e7213c4-6bf2-49ec-9db1-4aa91a4e78d1",
    "metadata": {},
    "outputs": [
@@ -527,7 +537,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "d571ef53-21b0-4445-9b4f-4ee19cd425f2",
    "metadata": {},
    "outputs": [
@@ -569,7 +579,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "89658f41-850f-44ba-ab37-f983118b3235",
    "metadata": {},
    "outputs": [
@@ -604,7 +614,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "65264df3-392f-4af5-92af-63e5f43c187f",
    "metadata": {},
    "outputs": [
@@ -630,7 +640,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "95906201-8444-43fa-b4b4-c478bed416f1",
    "metadata": {},
    "outputs": [
@@ -655,7 +665,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "ef9aeb4e-6ec5-4a58-8fae-a1f3dc1f7172",
    "metadata": {},
    "outputs": [
@@ -679,7 +689,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "e9269704-e9de-4a03-a0eb-0d71126a31a8",
    "metadata": {},
    "outputs": [
@@ -740,7 +750,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "3f9f0e21-9a85-4c41-8456-e581aec91148",
    "metadata": {},
    "outputs": [
@@ -802,7 +812,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "898305d1-4af6-4ee5-b0bd-652da2788c91",
    "metadata": {},
    "outputs": [
@@ -836,7 +846,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "9c44e548-043e-4044-9002-ddd555b68ae0",
    "metadata": {},
    "outputs": [
@@ -884,7 +894,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "67f1a1d8-8518-4819-9f75-333a96029435",
    "metadata": {},
    "outputs": [
@@ -912,7 +922,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "id": "d29e127d-087e-4b08-8c5e-58b5a56ace93",
    "metadata": {},
    "outputs": [
@@ -937,7 +947,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "id": "13f0f346-9c75-4ab3-81ef-d31c22d9bbb0",
    "metadata": {},
    "outputs": [
@@ -961,7 +971,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "id": "e7421637-2e0d-4ea3-9c6f-00ee1daace5b",
    "metadata": {},
    "outputs": [],
@@ -971,7 +981,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "id": "5fec362e-dba4-439d-be72-c62e5b8ad85a",
    "metadata": {},
    "outputs": [
@@ -993,7 +1003,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "id": "348fea53-8937-4ffa-a4e3-a8a4e38a10ff",
    "metadata": {},
    "outputs": [],
@@ -1005,7 +1015,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "id": "066bd02f-cba5-4f2c-85d5-5753737ada68",
    "metadata": {},
    "outputs": [
@@ -1269,7 +1279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "id": "c59e6d48-09cf-4633-9771-8983789b1e0c",
    "metadata": {},
    "outputs": [
@@ -1510,7 +1520,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "id": "2203e68a-8e44-453a-b82a-7e1bdcb0b7d3",
    "metadata": {},
    "outputs": [
@@ -1544,7 +1554,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "id": "a83f6aa2-fa20-46b8-8a29-7596f8339742",
    "metadata": {},
    "outputs": [
@@ -1635,7 +1645,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "id": "4b55bfad-e42e-4478-bd26-25d5634326e1",
    "metadata": {},
    "outputs": [
@@ -1662,7 +1672,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "id": "83b15db1-be19-4a83-a0ba-67d28adf2c5d",
    "metadata": {},
    "outputs": [
@@ -1725,7 +1735,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": null,
    "id": "441634cd-cff1-4810-880b-f2ad3d850132",
    "metadata": {},
    "outputs": [
