--- a/employee salary prediction.ipynb
+++ b/employee salary prediction.ipynb
@@ -1750,7 +1750,7 @@
     "                   'relationship', 'race', 'gender', 'native-country']\n",
     "\n",
     "st.set_page_config(page_title=\"Employee Salary Prediction\", page_icon=\"💼\", layout=\"centered\")\n",
-    "st.title(\"💼 Employee Salary Prediction App\")\n",
+    "st.title(\"💼 Employee Salary Predictor\")\n",
     "st.markdown(\"Predict whether an employee earns >50K or ≤50K based on input features.\")\n",
     "st.sidebar.header(\"Input Employee Details\")\n",
     "\n",
